# agentic_debating_llms

./: .env.example  README.md  pyproject.toml
app/: __init__.py  config.py  graph.py  main.py  prompts.py  schemas.py  state.py
app/licenses/: __init__.py  __main__.py  collector.py  renderer.py
app/llm/: __init__.py  interfaces.py  model_manager.py  ollama_client.py
app/nodes/: continuation_facilitator.py  debater.py  facilitator.py  finalize.py  search.py  summarizer.py  validator.py
app/services/: input_service.py  langfuse_service.py  search_query_optimizer.py  search_service.py  session_service.py
app/utils/: markdown_logger.py  retry.py  time_utils.py
docs/: architecture_and_libraries.md  repository_flow.md  third_party_licenses.md
in/: topic.md
tests/: test_continuation_facilitator.py  test_continuation_turn_count.py  test_debater.py  test_facilitator.py  test_input_service.py  test_langfuse_service.py  test_licenses.py  test_model_manager.py  test_ollama_client.py  test_output_writer.py  test_retry.py  test_routing.py  test_schemas.py  test_search_node.py  test_search_service.py  test_summarizer.py  test_validator.py
