[project]
name = "agentic-debating-llms"
version = "0.1.0"
description = "Local multi-agent debate app powered by Ollama, LangGraph, and Pydantic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"ddgs>=9.13.0",
	"duckduckgo-search>=8.1.1",
	"httpx>=0.27.2",
	"langfuse>=2.57.0",
	"langgraph>=0.2.39",
	"pydantic>=2.9.2",
	"pydantic-settings>=2.5.2",
	"python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.3",
]

[project.scripts]
debate-app = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
